# THU2024Spring-CG-Final

./: CMakeLists.txt  README.md  run_all.sh  大作业要求.txt
include/: NEE.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  material.hpp  mesh.hpp  object3d.hpp  path_tracing.hpp  plane.hpp  ray_tracing.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  triangle.hpp  utils.hpp
src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp
testcases/: china.txt  cornell.txt  depth.txt  glossy.txt  move.txt  scene01_basic.txt  scene08_smallpt_square.txt  scene10_wineglass.txt  texture.txt
